--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # https://vercel.com/docs/storage/vercel-postgres
-POSTGRES_URL=
+POSTGRES_URL=postgresql://postgres:@Arshad44@db.izniiomvacugbknrtyqu.supabase.co:5432/postgres
 
 NEXTAUTH_URL=http://localhost:3000
 AUTH_SECRET= # https://generate-secret.vercel.app/32
 
 # https://authjs.dev/getting-started/providers/github
-AUTH_GITHUB_ID=
-AUTH_GITHUB_SECRET=
+AUTH_GITHUB_ID=Ov23liwSscEBTxO0EwiL
+AUTH_GITHUB_SECRET=0e2271f29ab274f9c98ba34c023ba0e896b0213a
